# weseecolor

./: .gitignore  README.md  astro.config.mjs  finish-push.sh  keystatic.config.ts  package-lock.json  package.json
.claude-plugin/: plugin.json
docs/: tally-forms.md
outputs/: README.md
public/: _redirects
releases/: README.md
scripts/: build-plugin.sh  migrate-legacy.py
skills/weseecolor-pharma/: SKILL.md
skills/weseecolor-pharma/references/: README.md  canva-template.md  rating-legend.md  report-template.docx  report-template.html
skills/weseecolor-pharma/renderer/: SKELETON.md  card_template.html.j2  extract_sample.py  pyproject.toml  render_card.py
skills/weseecolor-pharma/renderer/fonts/: fonts.css
skills/weseecolor-pharma/renderer/samples/: 5018.json  5019.json  5020.json  5021.json  5022.json  5023.json  5024.json  REVIEW_SUMMARY.md
skills/weseecolor-voice/: SKILL.md
src/: content.config.ts  middleware.ts
src/components/: ArticleCard.astro  CategoryPill.astro  ExpertCard.astro  Footer.astro  Header.astro  HeroCarousel.astro  PageHero.astro  Prose.astro  SourcesList.astro  TallyEmbed.astro  VideoCard.astro  VideoGrid.astro
src/content/articles/: chemical-peels.mdoc  (+17 more)
src/layouts/: BaseLayout.astro
src/lib/: keystatic.ts
src/pages/: advocacy.astro  advocacy2.astro  care.astro  community-conversations.astro  expertvoices.astro  find-a-practitioner.astro  index.astro  join-us.astro  meet-our-experts.astro  privacy-policy.astro  product-reviews.astro  skin-hair-conditions.astro  telehealth.astro  who.astro
src/styles/: global.css
(+26 files in other folders)
